2011-10-09 Roman
- FIX:DB.PostgreSQL: TIMESTAMP place for DateTimeDec integer type is fixed.


2011-10-07 Roman
- UI.VCAEngine: Document generation repeat limit for primitive "Document" is set to time limit 5s.


2011-10-06 Roman
- DAQ: Force loading for all fields of controller's and parameter's object is added.
- DAQ.ModBus: Force protocol set on creation to "TCP", for some specific fields visible update.
- DAQ.Siemens, DAQ.DiamondBoards: Full controller's and parameter's object load mechanism update.


2011-10-05 Roman
- SYS: Debian init script is updated by "almaz".


2011-10-04 Roman
- !!:FIX:DAQ.Siemens: Float and Double values get and set is fixed. Reconnect set is fixed on error connection.
    Integer's, Real's and String's size property using is fixed. Links clear on parameter disable is made.
- FIX:DAQ.ModBus: Links clear on parameter disable is made. Links to special attributes clear on disable is fixed.
- FIX:UI.Vision: Edition status is fixed for LineEdit on no confirmed mode.


2011-09-23 Roman
- FIX:DAQ.ModBus: Write EVAL to writible attribute on time error writing to remote device.
- FIX:DAQ: Get value by time from all archives by function get{S|R|B|I}() is fixed for archives process not only buffer.


2011-09-20 Roman
- FIX:UI.QTCfg: Crash on page items change after error connect to disconnected remote station.
- FIX:UI.Vision: Select group widgets by mouse window on development is fixed.


2011-09-18 Roman
- !:DAQ.JavaLikeCalc, Special.FLibComplex1, Special.FLibMath, Special.FLibSYS:
    Direct librarie's functions dynamic call is added, by: SYS.DAQ.JavaLikeCalc["lib_{Lib}"].funcId(prms, ...).


2011-09-15 Roman
- UI.VCAEngine: The "user" field of session object is set to resourced string for possible crash prevent on multiply
    connections to single session.


2011-09-14 Roman
- DAQ.SNMP: Check for USM_PRIV_PROTO_AES allow is added for build with NetSNMP version 5.1 and early.


2011-09-13 Roman